@@ -96,7 +96,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr id="tr_id" class='tr_class'>
           <td>Data1</td>
           <td>Data2</td>
         </tr>
