@@ -82,6 +82,7 @@ module Druid
                          :span,
                          :table,
                          :cell,
+                         :row,
                          :image,
                          :form,
                          :list_item,
